add or del 테스트 템플렛 작성 (최종본으로 할 예정)
add or del 테스트 템플렛 작성 (최종본으로 할 예정)

--- a/Front_이종윤/test1/html/wordbook.html
+++ b/Front_이종윤/test1/html/wordbook.html
@@ -66,16 +66,16 @@
     </header>
     <div id="view_body">
         <div id="wordbooks">
-            <li id="wordbook_list">
-                <ol><div id="wordbook_p_1"><div><a>Wordbook1</a></div></div></ol>
-                <ol><div id="wordbook_p_2"><div><a>Wordbook2</a></div></div></ol>
-                <ol><div id="wordbook_p_3"><div><a>Wordbook3</a></div></div></ol>
-                <ol><div id="wordbook_p_4"><div><a>Wordbook4</a></div></div></ol>
-                <ol><div id="wordbook_p_1"><div><a>Wordbook5</a></div></div></ol>
-                <ol><div id="wordbook_p_2"><div><a>Wordbook6</a></div></div></ol>
-                <ol><div id="wordbook_p_3"><div><a>Wordbook7</a></div></div></ol>
-                <ol><div id="wordbook_p_4"><div><a>Wordbook8</a></div></div></ol>
-            </li>
+            <ul id="wordbook_list">
+                <li><div id="wordbook_p_1"><div><a>Wordbook1</a></div></div></li>
+                <li><div id="wordbook_p_2"><div><a>Wordbook2</a></div></div></li>
+                <li><div id="wordbook_p_3"><div><a>Wordbook3</a></div></div></li>
+                <li><div id="wordbook_p_4"><div><a>Wordbook4</a></div></div></li>
+                <li><div id="wordbook_p_1"><div><a>Wordbook5</a></div></div></li>
+                <li><div id="wordbook_p_2"><div><a>Wordbook6</a></div></div></li>
+                <li><div id="wordbook_p_3"><div><a>Wordbook7</a></div></div></li>
+                <li><div id="wordbook_p_4"><div><a>Wordbook8</a></div></div></li>
+            </ul>
         </div>
         <div id="button_list">
             <input type="button" class="button_nomal" id="add_wordbook" value="단어장 추가">
