--- a/Front_이종윤/test4/wordList.html
+++ b/Front_이종윤/test4/wordList.html
@@ -121,6 +121,121 @@
             white-space:nowrap;
         }
     </style>
+    <style>
+        #popup
+        {
+            display: none;
+            position:fixed; 
+            width: 100%; 
+            height: 100%; 
+            top:0; 
+            left:0; 
+            background:rgba(0,0,0,0.1);
+            z-index: 10;
+        }
+        #closePopupBtn
+        {
+            float: right;
+            background-color: rgba(0,0,0,0);
+            border: none;
+            padding:13px;
+            outline: none;
+            cursor: pointer;
+            transition:0.3s
+        }
+        #closePopupBtn:hover
+        {
+            transform: scale( 1.2 );
+        }
+        #popupForm
+        {
+            width: 300px;
+            height: 300px;
+            background-color: white;
+            margin: auto;
+            border-radius: 10px;
+            padding: 20px;
+            box-shadow: 3px 3px 3px gray;
+            margin-top: 70px;
+        }
+        input[type="text"]
+        {
+            padding:7px;
+            width: 90%;
+            border-radius: 5px;
+            border : solid 1.5px gray;
+            outline: none;
+            font-size: 13px;
+        }
+    
+        input[type="button"]
+        {
+            width: 70px;
+            outline: none;
+            background-color: #008cff;
+            color: white;
+            padding: 4px 10px;
+            font-size: 16px;
+            border: none;
+            border-radius: 10px;
+            margin : 10px 0px 0px 5px;
+            cursor: pointer;
+            float: right;
+        }
+        input[type="button"]:hover
+        {
+            background-color: #a8a8a8;
+        }
+        input[type="button"]:active
+        {
+            background-color: #008afc;
+        }
+        @media(max-width:500px)
+        {
+            #popupForm
+            {
+                width: 80%;
+            }
+        }
+    </style>
+    <style>
+        #wordSampleList
+        {
+            white-space:nowrap;
+            overflow-y:scroll;
+            height: 170px;
+            margin-bottom: 0px;
+        }
+
+        #wordSampleList::-webkit-scrollbar {
+            width: 6px;
+            height: 15px;
+        }
+        #wordSampleList::-webkit-scrollbar-track {
+            background-color: transparent;
+        }
+        #wordSampleList::-webkit-scrollbar-thumb {
+            border-radius: 7px;
+            background-color: rgb(236, 236, 236);
+        }
+        #wordSampleList::-webkit-scrollbar-button {
+            width: 0;
+            height: 0;
+        }
+        #wordSampleList li
+        {
+            margin:12px 0px;
+        }
+        #wordSampleList li:hover
+        {
+            color: #008afc;
+            font-weight: bold;
+        }
+        .sampleWord
+        {
+            cursor: pointer;
+        }
+    </style>
     <script type="text/javascript">
         window.onload = function () 
         {
@@ -150,9 +265,44 @@
                 }
             }
         }
+        $(function()
+        {
+            $("#addWord-btn").on("click",function (e)
+            {
+                $("#popup").fadeIn(150); e.preventDefault(); 
+            })
+            $("#closePopupBtn").on("click",function (e)
+            {
+                $("#popup").fadeOut(150); e.preventDefault(); 
+            })
+            $(document).on("click",".sampleWord",function()
+            {
+                $("#searchWord").val($(this).text());
+            });
+        });
     </script>
 </head>
 <body>
+    <div id="popup">
+        <div id="popupForm">
+            <button id="closePopupBtn">닫기</button>
+            <form id="addWordForm">
+                <p id="wordName">검색</p>
+                <input type="text" name="wordName" id="searchWord">
+                <ul id="wordSampleList">
+                    <li class="sampleWord">dsfsdf1</li>
+                    <li class="sampleWord">dsfsdf2</li>
+                    <li class="sampleWord">dsfsdf3</li>
+                    <li class="sampleWord">dsfsdf4</li>
+                    <li class="sampleWord">dsfsdf5</li>
+                    <li class="sampleWord">dsfsdf6</li>
+                    <li class="sampleWord">dsfsdf7</li>
+                    <li class="sampleWord">dsfsdf8</li>
+                </ul>
+                <input type="button" value="추가" id="addWordBtn">
+            </form>
+        </div>
+    </div>
     <div class="section">
         <div id="wordListTitle">단어장 이름</div>
         <div id="wordListHeader">
@@ -165,19 +315,6 @@
         <div id="wordList">
             <ul>
                 <li onclick="location.href='#';"><span class="wordRdColor">color</span><span class="wordMean">색상, 색</span></li>
-                <li onclick="location.href='#';"><span class="wordRdColor">transform</span><span class="wordMean">변형할 수 있는</span></li>
-                <li onclick="location.href='#';"><span class="wordRdColor">wordbook</span><span class="wordMean">단어집, 사전, 대본</span></li>
-                <li onclick="location.href='#';"><span class="wordRdColor">wordbookwordbook</span><span class="wordMean">단asdfasdfasdfdasfsdf어뜻</span></li>
-                <li onclick="location.href='#';"><span class="wordRdColor">test</span><span class="wordMean">단asdfasdfasdfdasfsdf어뜻</span></li>
-                <li onclick="location.href='#';"><span class="wordRdColor">test</span><span class="wordMean">단asdfasdfasdfdasfsdf어뜻</span></li>
-                <li onclick="location.href='#';"><span class="wordRdColor">test</span><span class="wordMean">단asdfasdfasdfdasfsdf어뜻</span></li>
-                <li onclick="location.href='#';"><span class="wordRdColor">test</span><span class="wordMean">단asdfasdfasdfdasfsdf어뜻</span></li>
-                <li onclick="location.href='#';"><span class="wordRdColor">test</span><span class="wordMean">단asdfasdfasdfdasfsdf어뜻</span></li>
-                <li onclick="location.href='#';"><span class="wordRdColor">test</span><span class="wordMean">단asdfasdfasdfdasfsdf어뜻</span></li>
-                <li onclick="location.href='#';"><span class="wordRdColor">test</span><span class="wordMean">단asdfasdfasdfdasfsdf어뜻</span></li>
-                <li onclick="location.href='#';"><span class="wordRdColor">test</span><span class="wordMean">단asdfasdfasdfdasfsdf어뜻</span></li>
-                <li onclick="location.href='#';"><span class="wordRdColor">test</span><span class="wordMean">단asdfasdfasdfdasfsdf어뜻</span></li>
-                <li onclick="location.href='#';"><span class="wordRdColor">test</span><span class="wordMean">단asdfasdfasdfdasfsdf어뜻</span></li>
             </ul>
         </div>
     </div>
